{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 31,
  "lineage": "3408c0f2-ff19-d839-6084-2f0aafd34a1b",
  "resources": [
    {
      "module": "module.ec2[\"aaaaa\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c3d59aa0bcc740",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:instance/i-01fcaa1f6bb799c75",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fcaa1f6bb799c75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "zabbix",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072480a75848d98f7",
            "private_dns": "ip-192-168-192-40.cn-northwest-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.192.40",
            "public_dns": "ec2-161-189-97-188.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "161.189.97.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws-cn:kms:cn-northwest-1:056406132709:key/6d530f75-145f-4aab-b0b9-70df0fe8e8da",
                "throughput": 125,
                "volume_id": "vol-0ba532711fe0ebeb8",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0382c8589f51270b0",
            "tags": {
              "Name": "gehc-709-aaaaa-ec2-instance"
            },
            "tags_all": {
              "Name": "gehc-709-aaaaa-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8e36c9d2845d7a5"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"aaaaa\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:security-group/sg-0d8e36c9d2845d7a5",
            "description": "test",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8e36c9d2845d7a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.192.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.192.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gehc-709-aaaaa-ec2-security_group",
            "name_prefix": "",
            "owner_id": "056406132709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gehc-709-aaaaa-ec2-security_group"
            },
            "tags_all": {
              "Name": "gehc-709-aaaaa-ec2-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"aaaaa\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgre",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2950146748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d8e36c9d2845d7a5",
            "security_group_rule_id": "sgr-004713f6a69ae6d99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"aaaaa\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.192.0/24"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-47249793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d8e36c9d2845d7a5",
            "security_group_rule_id": "sgr-08f94277dea5539bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.192.0/24"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-63060954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d8e36c9d2845d7a5",
            "security_group_rule_id": "sgr-00e4f55f3296b6502",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"bbbbb\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c3d59aa0bcc740",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:instance/i-09ecb00af424bb453",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ecb00af424bb453",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "zabbix",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e4b162d790f5743",
            "private_dns": "ip-192-168-192-119.cn-northwest-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.192.119",
            "public_dns": "ec2-69-231-129-121.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "69.231.129.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws-cn:kms:cn-northwest-1:056406132709:key/6d530f75-145f-4aab-b0b9-70df0fe8e8da",
                "throughput": 125,
                "volume_id": "vol-007e30396967a4546",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0382c8589f51270b0",
            "tags": {
              "Name": "gehc-709-bbbbb-ec2-instance"
            },
            "tags_all": {
              "Name": "gehc-709-bbbbb-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042a2293e38fdc459"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"bbbbb\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:security-group/sg-042a2293e38fdc459",
            "description": "test",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042a2293e38fdc459",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.192.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.192.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gehc-709-bbbbb-ec2-security_group",
            "name_prefix": "",
            "owner_id": "056406132709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gehc-709-bbbbb-ec2-security_group"
            },
            "tags_all": {
              "Name": "gehc-709-bbbbb-ec2-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"bbbbb\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgre",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-836890306",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-042a2293e38fdc459",
            "security_group_rule_id": "sgr-00cd25ae1e99f9e32",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"bbbbb\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.192.0/24"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2476220482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042a2293e38fdc459",
            "security_group_rule_id": "sgr-0819940261a81c00a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.192.0/24"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1750581903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042a2293e38fdc459",
            "security_group_rule_id": "sgr-0b09c4aa9e43f6c7f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"ccccc\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c3d59aa0bcc740",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:instance/i-035f18853d0717d15",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035f18853d0717d15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "zabbix",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ccaccfba12dab1c8",
            "private_dns": "ip-192-168-192-22.cn-northwest-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.192.22",
            "public_dns": "ec2-68-79-36-202.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "68.79.36.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws-cn:kms:cn-northwest-1:056406132709:key/6d530f75-145f-4aab-b0b9-70df0fe8e8da",
                "throughput": 125,
                "volume_id": "vol-030f517b6102a90ef",
                "volume_size": 200,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0382c8589f51270b0",
            "tags": {
              "Name": "gehc-709-ccccc-ec2-instance"
            },
            "tags_all": {
              "Name": "gehc-709-ccccc-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2d8e58032d0804d"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"ccccc\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:security-group/sg-0f2d8e58032d0804d",
            "description": "test",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2d8e58032d0804d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.192.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.192.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gehc-709-ccccc-ec2-security_group",
            "name_prefix": "",
            "owner_id": "056406132709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gehc-709-ccccc-ec2-security_group"
            },
            "tags_all": {
              "Name": "gehc-709-ccccc-ec2-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"ccccc\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgre",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4264188910",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f2d8e58032d0804d",
            "security_group_rule_id": "sgr-0272cdffbb281158a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"ccccc\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.192.0/24"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3397807352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2d8e58032d0804d",
            "security_group_rule_id": "sgr-012ad8bcad1e656e4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.192.0/24"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-732101670",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2d8e58032d0804d",
            "security_group_rule_id": "sgr-0d07e85c73d97a1bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:internet-gateway/igw-0d828c0e402790161",
            "id": "igw-0d828c0e402790161",
            "owner_id": "056406132709",
            "tags": {
              "Name": "gehc-709-test-vpc-igw"
            },
            "tags_all": {
              "Name": "gehc-709-test-vpc-igw"
            },
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d828c0e402790161",
            "id": "r-rtb-027225e062ef135cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027225e062ef135cd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:route-table/rtb-027225e062ef135cd",
            "id": "rtb-027225e062ef135cd",
            "owner_id": "056406132709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d828c0e402790161",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gehc-709-test-vpc-route-table"
            },
            "tags_all": {
              "Name": "gehc-709-test-vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd0af24da8f7509f",
            "route_table_id": "rtb-027225e062ef135cd",
            "subnet_id": "subnet-0382c8589f51270b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "artb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3a9231c12643c6c",
            "route_table_id": "rtb-027225e062ef135cd",
            "subnet_id": "subnet-08f919b267ced2463"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:subnet/subnet-0382c8589f51270b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1c",
            "availability_zone_id": "cnnw1-az3",
            "cidr_block": "192.168.192.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0382c8589f51270b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056406132709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gehc-709-test-vpc-subnet-0"
            },
            "tags_all": {
              "Name": "gehc-709-test-vpc-subnet-0"
            },
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:subnet/subnet-08f919b267ced2463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "192.168.192.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f919b267ced2463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056406132709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gehc-709-test-vpc-subnet-1"
            },
            "tags_all": {
              "Name": "gehc-709-test-vpc-subnet-1"
            },
            "vpc_id": "vpc-0725b89bc47b62e0e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:vpc/vpc-0725b89bc47b62e0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.192.0/24",
            "default_network_acl_id": "acl-0d0236f9bfbe43b2c",
            "default_route_table_id": "rtb-08d8620c3d44e979b",
            "default_security_group_id": "sg-08169ecd5db89532b",
            "dhcp_options_id": "dopt-0321286bf444fa6c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0725b89bc47b62e0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d8620c3d44e979b",
            "owner_id": "056406132709",
            "tags": {
              "Name": "gehc-709-test-vpc-vpc"
            },
            "tags_all": {
              "Name": "gehc-709-test-vpc-vpc"
            }
          }
        }
      ]
    }
  ]
}